[gd_scene load_steps=5 format=3 uid="uid://dnphcwetgd80m"]

[ext_resource type="Shader" path="res://Scripts/color_prep.gdshader" id="1_cgxjs"]
[ext_resource type="Script" path="res://Scripts/draggable.gd" id="2_see0j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_afnrr"]
resource_local_to_scene = true
shader = ExtResource("1_cgxjs")
shader_parameter/color = null
shader_parameter/set_color = null

[sub_resource type="CircleShape2D" id="CircleShape2D_hks5i"]
radius = 32.0

[node name="foodSprite" type="TextureRect"]
material = SubResource("ShaderMaterial_afnrr")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
expand_mode = 1
stretch_mode = 5
script = ExtResource("2_see0j")

[node name="foodArea" type="Area2D" parent="."]

[node name="foodAreaShape" type="CollisionShape2D" parent="foodArea"]
shape = SubResource("CircleShape2D_hks5i")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="area_entered" from="foodArea" to="." method="_on_food_area_area_entered"]
[connection signal="area_exited" from="foodArea" to="." method="_on_food_area_area_exited"]
